--- a/index.html
+++ b/index.html
@@ -17,26 +17,31 @@
             <div class="card">
                 <div class="info">
                     <img src="./img/image-victor.jpg" class="avatar" alt="avatar image of Victor">
-                    <h2>Victor Crest <span class="gray normal">26</span></h2>
+                    <h1>Victor Crest <span class="gray normal">26</span></h1>
                     <p class="gray">London</p>
                 </div>
                 <div class="social">
                     <div class="numbers">
                         <p class="bold">80K</p>
-                        <p>Follower</p>
+                        <p class="gray">Follower</p>
                     </div>
                     <div class="numbers">
                         <p class="bold">803K</p>
-                        <p>Likes</p>
+                        <p class="gray">Likes</p>
                     </div>
                     <div class="numbers">
                         <p class="bold">1.4K</p>
-                        <p>Photos</p>
+                        <p class="gray">Photos</p>
                     </div>
                 </div>
             </div>
         </div>
     </main>
+    <footer>
+        <div class="attribution">
+            Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
+            Coded by <a href="https://github.com/fdeluca85/profile_card_component.git">Francesca</a>.
+    </footer>
     
 </body>
 </html>
